--- a/index.html
+++ b/index.html
@@ -3572,7 +3572,7 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'georgia'; line-height: 15px; font-size: 12px; text-align: justify; color: rgba(77, 77, 77, 0.961);">
+                                <p style="font-family: 'georgia'; line-height: 15px; font-size: 12px; text-align: justify; color: rgba(48, 48, 48, 0.961);">
                                     Burkina
                                     Faso is a landlocked country nested in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is largely composed by young people and is about 20.9
@@ -3697,7 +3697,7 @@ function showSlides(n) {
 
                 <div class="envelop">
                     <div class="envelop-tittle">
-                        Ontario
+                        The province of Ontario
                     </div>
 
                     <a href="https://www.ontario.ca/" target="_blank">
