--- a/index.html
+++ b/index.html
@@ -3697,13 +3697,13 @@ function showSlides(n) {
 
                 <div class="envelop">
                     <div class="envelop-tittle">
-                        The province of Ontario
+                        The Province of Ontario
                     </div>
 
                     <a href="https://www.ontario.ca/" target="_blank">
                         <div class="content9a">
                             <figure>
-                                <figcaption style="font-family: verdana; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left; margin-top: -5px;">Ontario flag
+                                <figcaption style="font-family: verdana; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left;">Ontario flag
                                 </figcaption>
                                 <img src="https://th.bing.com/th?id=OIP.SYGUvSg8krNKTJzox9c-7gHaDt&w=349&h=174&c=8&rs=1&qlt=90&o=6&dpr=1.1&pid=3.1&rm=2" alt="Ontario Flag ">
                             </figure>
