--- a/index.html
+++ b/index.html
@@ -2727,9 +2727,9 @@
             padding: 5px;
             font-family: verdana;
             color: #000000;
-            font-size: 14.3px;
+            font-size: 14px;
             text-align: justify;
-            line-height: 19.3px;
+            line-height: 18.2px;
             background: transparent;
             margin-top: 12px;
         }
@@ -3857,13 +3857,13 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who legally migrated in Canada, I met lots challenges. First
-                            of all seeking asylum is not an easy thing, it matters with a long administrative procedure
-                            that can take at least five years to get the citizenship if granted. It's been hard because
-                            a new country and then a new life.
-                            I did have no parents, no relatives neither in Canada nor in Quebec. After spending 3 days
-                            in my motel room my finance has been hit and I had to look for other ways especially a cheap
-                            room to go. How to do as a newcomer in a cold country during automn? One thing was sure, I
+                            As a physical disabled person who have legally migrated to Canada, I have encountered many challenges. First
+                            of all seeking asylum is not an easy thing. It matters with long administrative procedures
+                            that can take at least five years long before getting the citizenship if granted. It's been hard because
+                            I am new country and I have to embrace a new life.
+                            I did have neither parents, nor relatives neither in Quebec-Canada. After spending 3 days
+                            in my motel room my finances have been hit and I have had to look for other ways especially a cheap
+                            room to live in. How to do as a newcomer in a cold country during automn? One thing was sure, I
                             couldn't afford to sleep outside.
                             So I went to Montreal downtown shelter to explain my situation and ask for help. Fortunately
                             I have been accepted to live there before starting the administrative procedures of seeking
