--- a/index.html
+++ b/index.html
@@ -3860,15 +3860,15 @@ function showSlides(n) {
                             As a physical disabled person who have legally migrated to Canada, I have encountered many challenges. First
                             of all seeking asylum is not an easy thing. It matters with long administrative procedures
                             that can take at least five years long before getting the citizenship if granted. It's been hard because
-                            I am new country and I have to embrace a new life.
-                            I did have neither parents, nor relatives neither in Quebec-Canada. After spending 3 days
+                            I am in a new country and have to embrace a new life and a new culture.
+                            I did have neither parents, nor relatives in Quebec-Canada. After spending 3 days
                             in my motel room my finances have been hit and I have had to look for other ways especially a cheap
                             room to live in. How to do as a newcomer in a cold country during automn? One thing was sure, I
                             couldn't afford to sleep outside.
                             So I went to Montreal downtown shelter to explain my situation and ask for help. Fortunately
-                            I have been accepted to live there before starting the administrative procedures of seeking
-                            asylum. That I've got certain knowledges and wanted to share them with you if one day you
-                            are in a similary situation. Check that informing cup to learn more.
+                            I have been granted asylum and then applied for the permanent residency's application.
+                            That, I've gotten certain informations and wanted to share them with you if one day have to deal
+                            with immigration in a similar way. Learn more...
                         </div>
 
                     </div>
