--- a/index.html
+++ b/index.html
@@ -3637,7 +3637,7 @@ function showSlides(n) {
                     <div class="contentt-wrapper">
 
                         <div class="contentt-wrapped">
-                            The Province Of Quebec
+                            The Province of Quebec
                         </div>
                         <a href="#" target="_blank">
                             <div class="contentw1">
@@ -3866,7 +3866,7 @@ function showSlides(n) {
                             room to live in. How to do as a newcomer in a cold country during automn? One thing was sure, I
                             couldn't afford to sleep outside.
                             So I went to Montreal downtown shelter to explain my situation and ask for help. Fortunately
-                            I have been granted asylum and then applied for the permanent residency's application.
+                            I have been granted asylum and then applied for the permanent residency.
                             That, I've gotten certain informations and wanted to share them with you if one day have to deal
                             with immigration in a similar way. Learn more...
                         </div>
