--- a/index.html
+++ b/index.html
@@ -3098,7 +3098,7 @@ function showSlides(n) {
         </div>
 
         <div class="Community">
-            <button class="dropbtn">Play Geographically
+            <button class="dropbtn">Play Geography
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3115,17 +3115,20 @@ function showSlides(n) {
         </div>
 
         <div class="Education">
-            <button class="dropbtn">Self Learning
+            <button class="dropbtn">Let's Learn
                 <i class="fa fa-caret-down">
                 </i>
             </button>
             <div class="Education-content">
                 <a href="file:///C:/Users/User/Documents/Mathematics.html" target="blank">Mathematics</a>
+                <a href="#"
+                    target="blank">Learn HTML</a>
                 <a href="https://learncssgrid.com/" target="blank">Learn CSS Grid</a>
-                <a href="https://www.worldatlas.com/articles/most-popular-languages-in-the-world.html#:~:text=What%20Are%20The%20Most%20Spoken%20Languages%20In%20The,-%20534%20million%20speakers.%20...%20More%20items...%20"
-                    target="blank">Most Spoken Languages</a>
-                <a href="https://www.education.gov.bf/accueil" target="blank">Education in Burkina
-                    Faso</a>
+                
+                <a href="#" target="blank">Learn Javascript</a>
+
+                <a href="#" target="blank">Learn Python</a>
+                    
             </div>
         </div>
 
