--- a/index.html
+++ b/index.html
@@ -3872,8 +3872,8 @@ function showSlides(n) {
                             couldn't afford to sleep outside.
                             So I went to Montreal downtown shelter to explain my situation and ask for help. Fortunately
                             I have been granted asylum and then applied for the permanent residency.
-                            That, I've gotten certain informations and wanted to share them with you if one day have to deal
-                            with immigration in a similar way. Learn more...
+                            That, I've gotten informations and wanted to share with you if one day have to deal
+                            with immigration in a similar way.  <a href="#">Learn more... </a>
                         </div>
 
                     </div>
