--- a/index.html
+++ b/index.html
@@ -2730,7 +2730,7 @@
             padding: 5px;
             font-family: 'Barlow Condensed', sans-serif;
             color: #2d2d2de2;
-            font-size: 19.5px;
+            font-size: 19px;
             text-align: justify;
             line-height: 19.5px;
             background: transparent;
@@ -3862,18 +3862,17 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who has legally immigrated to Canada, I have encountered many challenges. First
-                            of all seeking asylum is not an easy thing. It matters with long administrative procedures
-                            that can take at least five years long before getting the citizenship if granted. It's been hard because
-                            I am in a new country and have to embrace a new life and a new culture.
+                            As a physical disabled person who has legally immigrated to Canada, I have experienced many challenges. First
+                            of all seeking asylum is a long and difficult way. It matters with administrative procedures
+                            that can take at least 5 to 6 years long before getting the citizenship if there is a grant. It's been so hard because
+                            I am disabled in a new country and have to embrace a new culture.
                             I did have neither parents, nor relatives in Quebec-Canada. After spending 3 days
                             in my motel room my finances have been hit and I have had to look for other ways especially a cheap
-                            room to live in. How to do as a newcomer in a cold country during automn? One thing was sure, I
+                            room to live. How to do as a newcomer in a cold country during the fall and have to live my first winter? One thing was sure, I
                             couldn't afford to sleep outside.
-                            So I went to Montreal downtown shelter to explain my situation and ask for help. Fortunately
-                            I have been granted asylum and then applied for the permanent residency.
-                            That, I've gotten informations and wanted to share with you if one day have to deal
-                            with immigration in a similar way.  <a href="#">Learn more... </a>
+                            So I went to downtown Montreal in a shelter to explain my situation and ask for help. Fortunately
+                            I get granted asylum 2 years after my arrival. Then I applied for the permanent residency.
+                            That's why, I wanted to share some informations with anyone who will have to seek asylum.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
