--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Sharing photos, movies, telling stories, talking about a photo-dialogue that gathers people and then to debate, learning from each other, from close regions to remote ones, humunazing a world by words, observations and analyses, conversations for a better understanding, building a social harmony talking about some thematics in our communities where we're living. Having conclusions as frames and a scheme to better future projects after those conversations will be lighting another future about different matters including the disability, the diversity and more inclusion.  Still isolating disabled people in certain regions worldwide will jeopardize their lives but also the community in general. But including them (Disabled people) will mitigate manay of countless hugely repercussions given they are living witth disabilities. Doing that will probably enhance a social cohesion and harmonize our communities. As human-being we can't afford to fail in doing it. That's why some wonderful localities, regions, people, animals, birds, wildlife, nature pics may need to get to known, be appreciated or not.">
+        content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
     <meta name="keywords"
-        content="disability,saxiwama,culture,Photos,pictures,landscapes,nature,animals,Africa,Europe,America,disability,inclusion,photography">
-    <meta name="twitter:card" content="summary">
-    <meta property="og:site_name" content="saxiwama">
-    <meta property="og:title" content="saxiwama">
+    content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    <meta name="twitter:card" content="summary">
+    <meta property="og:site_name" content="tikinyiki,tiki-'-yiki">
+    <meta property="og:title" content="tikiyiki">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.saxiwama.org/index.html">
-    <meta property="og:image" content="https://www.zupimages.net/up/21/49/p7y3.jpg?cities">
+    <meta property="og:url" content="#">
+    <meta property="og:image" content="#">
     <meta property="og:image:type" content="image jpeg">
     <meta property="og:image:width" content="195px">
     <meta property="og:image:height" content="160px">
     <meta property="og:description"
-        content=" Storylling, culture, Photography, Disability, movies, networking, inclusion, disabled photographer">
+        content="#">
     <meta property="og:determiner" content="auto">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/49/p7y3.jpg?cities">
+    <meta property="og:image:secure_url" content="#">
     <meta property="og:locale" content="EN_CA">
     <meta property="og:locale:alternate" content="FR_CA">
     <link rel="stylesheets" type="text/css" href="_css/style.css_" media="all">
@@ -30,6 +29,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
     <style>
@@ -52,11 +54,12 @@
             justify-content: center;
             align-items: center;
             background-position: cover;
+            font-family: 'Barlow Condensed', sans-serif;
         }
         
 
         .navbar {
-            background: #0b0b0be6;
+            background: #000;
             height: 56.5px;
             object-fit: cover;
             z-index: 1;
@@ -101,17 +104,18 @@
         }
 
         .Photography .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
+            padding: 15.6px 8px;
+            color: #fff;
+            background: inherit;
             border: none;
-    
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            background: red!important;
+            background: red;
             color: #fff;
             transition: 0.11s linear;
             cursor: pointer;
@@ -156,16 +160,17 @@
         }
 
         .Sport .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
+            color: #fff;
+            padding: 15.65px 8px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
             border: none;
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            background: red!important;
+            background: red;
             color: #fff;
             transition: 0.11s linear;
             cursor: pointer;
@@ -174,7 +179,7 @@
         .Sport-content {
             display: none;
   position: absolute;
-  background: #fefefe!important;
+  background: #fff;
   width: 219px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -208,11 +213,12 @@
         }
 
         .Education .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
+            padding: 15.65px 8px;
+            color: #fff;
             border: none;
         }
 
@@ -260,11 +266,12 @@
         }
 
         .Daily .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
+            color: #fff;
+            padding: 15.65px 8px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
             border: none;
         }
 
@@ -312,11 +319,12 @@
         }
 
         .Photos .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
+            color: #fff;
+            padding: 15.65px 8px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
             border: none;
         }
 
@@ -364,11 +372,12 @@
         }
 
         .Community .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
+            color: #fff;
+            padding: 15.65px 8px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
             border: none;
         }
 
@@ -416,11 +425,11 @@
         }
 
         .TikiYiki .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
+            padding: 15.65px 8px;
             border: none;
             margin-left: 45px;
         }
@@ -470,11 +479,12 @@
         }
 
         .Disability .dropbtn {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 18.5px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 22px;
             color: #fff;
             background: inherit;
-            padding: 17px 8px;
+            padding: 15.65px 8px;
+            color: #fff;
             border: none;
         }
 
@@ -634,16 +644,17 @@
             flex-direction: row;
             justify-content: center;
             width: 80%;
-            height: 30.5px;
+            height: 30.85px;
             margin-left: 2.48px;
             border-radius: 15px;
             color: #000;
             background: rgba(9, 9, 9, 0.798);
-            font-family: 'verdana';
-            font-size: 1.1rem;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 1.65rem;
             animation: mymove0 55s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
+            padding: 5px;
         }
 
         @keyframes mymove0 {
@@ -2885,18 +2896,17 @@ background: #717171;
             width: 150px;
             height: 30px;
             font-family: 'arial';
-            font-size: 12px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 17px;
             padding-top: 20px;
             padding-bottom: 5px;
-            margin-top: 4px;
-            border-radius: 0.3rem;
-            border: 2px solid #000!important;
+            margin-top: 10px;
             cursor: pointer;
         }
 
         .datime:hover {
-            background: rgb(1, 134, 1)!important;
-            color: rgb(238, 238, 2);
+            background: rgb(4, 171, 4)!important;
+            color: rgb(255, 251, 1);
         }
 
         .reader {
