--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
             width: 100%;
             height: 100px;
             position: relative;
-            font-family: 'trebuchet ms';
-            font-size: 19px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 20px;
             background: rgba(8, 8, 8, 0.914);
             background-size: cover;
             object-fit: cover;
@@ -718,7 +718,7 @@
             display: flex;
             position: relative;
             background: -webkit-linear-gradient(rgba(255, 251, 17, 0.902), #e3dbd4d0);
-            font-family: 'verdana';
+            font-family: 'Barlow Condensed', sans-serif;
             width: 90px;
             height: 30.5px;
             padding-right: 3.5px;
@@ -758,6 +758,7 @@
         .titlcontainer:hover {
             animation-play-state: paused;
             transform: scale(1.1);
+            font-family: 'Barlow Condensed', sans-serif;  
         }
 
         .wrapper {
@@ -777,7 +778,7 @@
             display: flex;
             position: relative;
             background: -webkit-linear-gradient(rgb(0, 113, 0), rgb(0, 97, 0));
-            font-family: 'verdana';
+            font-family: 'Barlow Condensed', sans-serif;
             font-size: 12px bold;
             color: yellow;
             border-top: 4px solid #ff0;
@@ -810,8 +811,8 @@
         .fmonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(0, 113, 0), rgb(0, 97, 0));
-            font-family: 'verdana';
+            background: -webkit-linear-gradient(rgb(1, 121, 1), rgb(1, 104, 1));
+            font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
             font-size: 12px bold;
             border-bottom: 4px solid yellow;
@@ -3036,7 +3037,7 @@ function showSlides(n) {
                 <div class="cover">
                     <div class="ttl-container">
                         <div class="t-container">
-                            <div class="titlcontainer">
+                            <div class="titlcontainer" style="font-family: 'Barlow Condensed', sans-serif;">
                                 <a href="file:///C:/Users/User/Documents/Photo.html" target="blank">
                                     <h4>Photos</h4>
                                 </a>
