--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
             position: relative;
             background: -webkit-linear-gradient(rgb(0, 113, 0), rgb(0, 97, 0));
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 12px bold;
+            font-size: 25px;
             color: yellow;
             border-top: 4px solid #ff0;
             border-radius: 13px;
@@ -789,7 +789,7 @@
             margin-left: -4.5px;
             justify-content: start;
             align-items: center;
-            animation: mymove14 55s ease-in infinite;
+            animation: mymove14 50s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
@@ -814,7 +814,7 @@
             background: -webkit-linear-gradient(rgb(1, 121, 1), rgb(1, 104, 1));
             font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
-            font-size: 12px bold;
+            font-size: 25px;
             border-bottom: 4px solid yellow;
             border-radius: 13px;
             margin-top: 4px;
@@ -823,7 +823,7 @@
             height: 30px;
             justify-content: start;
             align-items: center;
-            animation: mymove13 55s ease-in infinite;
+            animation: mymove13 50s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
@@ -2429,7 +2429,7 @@
     justify-content: center;
     justify-items: center;
     background: transparent;
-    font-family: 'Comic sans ms';
+    font-family: '';
     font-size: 23px;
     background-color: #fdfdfdd1;
     color: rgba(130, 130, 130, 0.849);
