--- a/index.html
+++ b/index.html
@@ -777,13 +777,13 @@
         .emonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(0, 113, 0), rgb(0, 97, 0));
+            background: -webkit-linear-gradient(rgb(2, 137, 2), rgb(2, 100, 2));
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 25px;
+            font-size: 12px bold;
             color: yellow;
-            border-top: 4px solid #ff0;
+            border-top: 4px solid rgb(177, 221, 236);
             border-radius: 13px;
-            width: 65%;
+            width: 64.6%;
             height: 30px;
             margin-top: 4px;
             margin-left: -4.5px;
@@ -811,15 +811,15 @@
         .fmonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(1, 121, 1), rgb(1, 104, 1));
+            background: -webkit-linear-gradient(rgb(2, 137, 2), rgb(2, 100, 2));
             font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
-            font-size: 25px;
-            border-bottom: 4px solid yellow;
+            font-size: 15px bold;
+            border-bottom: 4px solid rgb(177, 221, 236);
             border-radius: 13px;
             margin-top: 4px;
             margin-left: -4.5px;
-            width: 65%;
+            width: 64.6%;
             height: 30px;
             justify-content: start;
             align-items: center;
@@ -2429,7 +2429,7 @@
     justify-content: center;
     justify-items: center;
     background: transparent;
-    font-family: '';
+    font-family: 'Comic sans ms';
     font-size: 23px;
     background-color: #fdfdfdd1;
     color: rgba(130, 130, 130, 0.849);
