--- a/index.html
+++ b/index.html
@@ -777,9 +777,9 @@
         .emonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(2, 137, 2), rgb(2, 100, 2));
+            background: -webkit-linear-gradient(rgb(5, 172, 5), rgb(3, 119, 3));
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 12px bold;
+            font-size: 21px;
             color: yellow;
             border-top: 4px solid rgb(177, 221, 236);
             border-radius: 13px;
@@ -789,7 +789,7 @@
             margin-left: -4.5px;
             justify-content: start;
             align-items: center;
-            animation: mymove14 50s ease-in infinite;
+            animation: mymove14 15s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
@@ -811,10 +811,10 @@
         .fmonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(2, 137, 2), rgb(2, 100, 2));
+            background: -webkit-linear-gradient(rgb(3, 119, 3), rgb(5, 172, 5));
             font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
-            font-size: 15px bold;
+            font-size: 21px;
             border-bottom: 4px solid rgb(177, 221, 236);
             border-radius: 13px;
             margin-top: 4px;
@@ -823,7 +823,7 @@
             height: 30px;
             justify-content: start;
             align-items: center;
-            animation: mymove13 50s ease-in infinite;
+            animation: mymove13 15s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
