--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
+    <meta name="description" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
     <meta name="keywords"
     content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="tikinyiki,tiki-'-yiki">
