--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
+    <meta name="description"
+        content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
     <meta name="keywords"
     content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="tikinyiki,tiki-'-yiki">
@@ -59,7 +60,7 @@
 
         .navbar {
             background: #000;
-            height: 56.5px;
+            height: 57px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -763,7 +764,7 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: red;
+            background: #000;
             width: 98%;
             height: 72px;
             flex-wrap: wrap;
@@ -776,19 +777,19 @@
         .emonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(5, 172, 5), rgb(3, 119, 3));
+            background: -webkit-linear-gradient(rgb(0, 113, 0), rgb(0, 97, 0));
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 21px;
+            font-size: 25px;
             color: yellow;
-            border-top: 4px solid rgb(177, 221, 236);
+            border-top: 4px solid #ff0;
             border-radius: 13px;
-            width: 64.6%;
+            width: 60%;
             height: 30px;
             margin-top: 4px;
             margin-left: -4.5px;
             justify-content: start;
             align-items: center;
-            animation: mymove14 15s ease-in infinite;
+            animation: mymove14 50s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
@@ -810,19 +811,19 @@
         .fmonth-container {
             display: flex;
             position: relative;
-            background: -webkit-linear-gradient(rgb(3, 119, 3), rgb(5, 172, 5));
+            background: -webkit-linear-gradient(rgb(1, 121, 1), rgb(1, 104, 1));
             font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
-            font-size: 21px;
-            border-bottom: 4px solid rgb(177, 221, 236);
+            font-size: 25px;
+            border-bottom: 4px solid yellow;
             border-radius: 13px;
             margin-top: 4px;
             margin-left: -4.5px;
-            width: 64.6%;
+            width: 60%;
             height: 30px;
             justify-content: start;
             align-items: center;
-            animation: mymove13 15s ease-in infinite;
+            animation: mymove13 50s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
         }
@@ -2423,15 +2424,15 @@
 .TITLE{
     display: grid;
     grid-template-columns: auto;
-    width:900px ;
+    width:900px;
     height:38px;
     justify-content: center;
     justify-items: center;
     background: transparent;
-    font-family: 'Comic sans ms';
+    font-family: 'Titillium web' sans-serif;
     font-size: 23px;
-    background-color: #fdfdfdd1;
-    color: rgba(130, 130, 130, 0.849);
+    background-color: #fff;
+    color: rgba(109, 109, 109, 0.849);
     margin-top: -10px;
 }
         .C2 {
