--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: #000;
+            background: rgb(255, 47, 6);
             width: 98%;
             height: 72px;
             flex-wrap: wrap;
@@ -783,7 +783,7 @@
             color: yellow;
             border-top: 4px solid #ff0;
             border-radius: 13px;
-            width: 60%;
+            width: 65%;
             height: 30px;
             margin-top: 4px;
             margin-left: -4.5px;
@@ -819,7 +819,7 @@
             border-radius: 13px;
             margin-top: 4px;
             margin-left: -4.5px;
-            width: 60%;
+            width: 65%;
             height: 30px;
             justify-content: start;
             align-items: center;
