--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             color: #000;
             background: rgba(9, 9, 9, 0.798);
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 1.65rem;
+            font-size: 1.6rem;
             animation: mymove0 55s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
@@ -898,7 +898,6 @@
             align-items: center;
             flex-direction: column;
             margin-top: -30px;
-            border-top: 2px solid #464646e2;
         }
 
         .B {
@@ -2924,13 +2923,18 @@ background: #717171;
             width: 84%;
             padding: 5px;
             height: 45px;
-            font-family: 'trebuchet ms';
-            font-size: 23px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 25px;
             word-spacing: 1.8px;
-            border: 0.2px solid #9d9d9d7c;
-            box-shadow: 0px 0px 2px 1px rgba(210, 210, 210, 0.565);
+            border: 0.2px solid #a6a6a67c;
+            box-shadow: 0px 0px 2px 1px rgba(212, 212, 212, 0.565);
             margin-top: -5px;
             border-radius: 0.2rem;
+        }
+        .reader:hover{
+            background: #fff;
+            border: 0.2px solid #a6a6a67c;
+            color: #131313ef;
         }
     </style>
 
@@ -3216,7 +3220,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome On This Website ! Thank You For Your Visit ! Your Feedbacks Will Be Appreciated.</b>
+                <b>Welcome ! This Website Is In Project ! Some Of The Pics And Links Are Temporarily Set. Thank You For Your Visit !</b>
             </div>
 
             
