--- a/index.html
+++ b/index.html
@@ -4242,11 +4242,12 @@ function showSlides(n) {
     </div>
 
     <div class="footer">
-        Copyright © 2021-2022 * [Gabriel COMPAORE alias Kouss Self Made Man]
-        <br>| Disability Rights Advocate| Free Thinker |
+        Copyright © 2023 Tiki N'Yiki
         <br>
+        | Fights For Disabled Rights |
         <br>
         DISABILITY IS NOT DESTINY
+        <br>
     </div>
 </body>
 
