--- a/index.html
+++ b/index.html
@@ -4244,7 +4244,7 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        | Fights For Disabled Rights |
+        Fights For Disabled Rights
         <br>
         DISABILITY IS NOT DESTINY
         <br>
