--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
-    <meta name="keywords"
-    content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    <meta name="twitter:card" content="summary">
+    <meta name="description" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
+    <meta name="keywords" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    
+    <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="tikinyiki,tiki-'-yiki">
     <meta property="og:title" content="tikiyiki">
     <meta property="og:type" content="website">
@@ -34,7 +33,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
-    <style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">    <style>
         * {
             box-sizing: border-box;
             margin-top: 0;
@@ -146,7 +149,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Photography:hover .Photography-content {
@@ -200,7 +203,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Sport:hover .Sport-content {
@@ -253,7 +256,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Education:hover .Education-content {
@@ -306,7 +309,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Daily:hover .Daily-content {
@@ -359,7 +362,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Photos:hover .Photos-content {
@@ -412,7 +415,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Community:hover .Community-content {
@@ -466,7 +469,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .TikiYiki:hover .TikiYiki-content {
@@ -650,7 +653,7 @@
             color: #000;
             background: rgba(9, 9, 9, 0.798);
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 1.6rem;
+            font-size: 1.45rem;
             animation: mymove0 55s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
@@ -3292,11 +3295,12 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Tik-Yik.html" target="_blank">
                     <div class="k-image22" id="k-image2">
-                        <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>
                                 Why Tiki Yiki ?
-                                What Is Tiki Yiki Meaning ? What Is Tiki Yiki Doing ?</b></p>
+                                What Is Tiki N'Yiki Doing ?
+                            </b>
+                            </p>
 
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
@@ -3327,7 +3331,7 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
                     <div class="k-image2">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b> "Inclusiveness"
                                 May Be Ordinary Or New To You. But Inclusiveness As Word Never Been
                                 Strange To The Dictionary.
@@ -3360,7 +3364,7 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>Health Care Is A
                                 Common Human Right Worldwide. But In Some Regions (Countries) Lacking Socialized
                                 Medecine, People Simply Die Of Malaria.</b> </p>
@@ -3389,10 +3393,9 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek4">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>What Means Food
-                                Security To You ? How Can We Do To Challenge And May End Food Insecurity Around The
-                                World ?</b> </p>
+                                Security To You ? How Can We Do To Challenge It Worldwide?</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the
@@ -3421,7 +3424,7 @@ function showSlides(n) {
                 <a href="https://www.un.org/en/global-issues/climate-change" target="_blank">
                     <div class="k-imagek5">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 22px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
                             <b>Climate Change Is a
                                 Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
                                 Around The World. There Is
@@ -3454,14 +3457,13 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek6">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>Disability Is Not
-                                Destiny. But For Disabled People Living In Areas Where Inclusiveness Has Not Yet Room, They
-                                Have To
-                                Struggle At Least Two Times Harder Than Any Else To Get Their Needs Met Or Achieve.
-                                They're Living In A Toxic Environment Favored By Stigmatisations.</b> </p>
+                                Destiny. But For Disabled People Living In Exclusive Areas, They
+                                Have To Struggle Two Times Harder At Least Than Any Else To Get Their Needs Or Achieve.
+                                They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">As a disabled person, I experienced
-                            and still experiencing a lot of discriminations. It's too tough but it's also challenging. I
+                            and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
                     </div>
@@ -3485,7 +3487,7 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
                     <div class="k-imagek7">
                         <p
-                            style="font-family: georgia; font-size: 20px; color: rgba(32, 32, 32, 0.654); line-height: 25px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>Culture Is Like A
                                 Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
                                 Promote And Preserve Identity From Elders To Kids,
